<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:background="@drawable/border_recangle_fill_blue_light"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:text="@string/question_index"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/question_type"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/measure_target"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/check_content"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/difficluty"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/score_value"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/avg_score"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/std"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/identity"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/error_rate"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:listitem="@layout/recycle_list"/>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>