<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:background="@drawable/border_recangle_fill_blue_light"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:text="@string/cla"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/perfect"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/good"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/middle"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/pass_score"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/fail"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/total_person_count"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/already_yet"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>
        <TextView
            android:text="@string/submit_yet"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/text_666"/>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:listitem="@layout/recycle_list"/>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>