<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@drawable/line_bottom"
    android:showDividers="beginning|middle|end"
    android:divider="@drawable/shape_divider_h"
    android:layout_width="match_parent"
    android:layout_height="25dp">
    <TextView
        android:id="@+id/tv_question_numb"
        android:gravity="center"
        android:text="@string/question_index"
        android:textColor="@color/text_666"
        android:textSize="9sp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="80"/>
    <TextView
        android:id="@+id/tv_question_type"
        android:gravity="center"
        android:text="@string/question_type"
        android:textColor="@color/text_666"
        android:textSize="9sp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="90"/>
    <TextView
        android:id="@+id/tv_question_target"
        android:gravity="center"
        android:text="@string/measure_target"
        android:textColor="@color/text_666"
        android:textSize="9sp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="150"/>
    <TextView
        android:id="@+id/tv_question_point"
        android:gravity="center"
        android:text="@string/knowledge_point"
        android:textColor="@color/text_666"
        android:textSize="9sp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="150"/>
    <TextView
        android:id="@+id/tv_question_difficult"
        android:gravity="center"
        android:text="@string/difficluty"
        android:textColor="@color/text_666"
        android:textSize="9sp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="85"/>
    <TextView
        android:id="@+id/tv_question_score"
        android:gravity="center"
        android:text="@string/score_value"
        android:textColor="@color/text_666"
        android:textSize="9sp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="80"/>
</LinearLayout>