<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_grey"
        android:padding="@dimen/padding_3"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_gravity="center_vertical"
                android:layout_width="3dp"
                android:layout_height="12dp"
                android:background="@color/blue_tag"/>
            <TextView
                android:layout_marginLeft="@dimen/padding_1"
                android:textSize="12sp"
                android:text="@string/score_compear_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/padding_3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/border_recangle_fill_blue_light"
            android:gravity="center_vertical">
            <TextView
                android:gravity="center"
                android:text="@string/cla"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/avg_score"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/max_score"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/min_score"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/middle_level"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/all_level"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <TextView
                android:gravity="center"
                android:text="@string/submit_yet"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/correct_yet"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_sumary"
            android:orientation="vertical"
            android:divider="@drawable/shape_divider_v"
            android:showDividers="middle|end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/padding_3"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_gravity="center_vertical"
                android:layout_width="3dp"
                android:layout_height="12dp"
                android:background="@color/blue_tag"/>
            <TextView
                android:layout_marginLeft="@dimen/padding_1"
                android:textSize="12sp"
                android:text="@string/level_compear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/padding_3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/border_recangle_fill_blue_light"
            android:gravity="center_vertical">
            <TextView
                android:gravity="center"
                android:text="@string/cla"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/perfect"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/good"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/middle"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/pass_score"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/fail"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <TextView
                android:gravity="center"
                android:text="@string/sum_count"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_level"
            android:orientation="vertical"
            android:divider="@drawable/shape_divider_v"
            android:showDividers="middle|end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/padding_3"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_gravity="center_vertical"
                android:layout_width="3dp"
                android:layout_height="12dp"
                android:background="@color/blue_tag"/>
            <TextView
                android:layout_marginLeft="@dimen/padding_1"
                android:textSize="12sp"
                android:text="@string/layer_compear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/padding_3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/border_recangle_fill_blue_light"
            android:gravity="center_vertical">
            <TextView
                android:gravity="center"
                android:text="@string/cla"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/layer_1"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/layer_2"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/layer_3"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <TextView
                android:gravity="center"
                android:text="@string/layer_4"
                android:textSize="10sp"
                android:textColor="@color/text_666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_layer"
            android:orientation="vertical"
            android:divider="@drawable/shape_divider_v"
            android:showDividers="middle|end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>
    </LinearLayout>
</ScrollView>
